--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/netlify": "^5.5.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@astropub/icons": "^0.2.0",
     "astro": "^4.16.7",
-    "astro-icon": "^1.1.1",
     "astro-seo": "^0.8.4",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
