--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^5.5.4",
     "@astrojs/tailwind": "^5.1.2",
     "@astropub/icons": "^0.2.0",
+    "@notionhq/client": "^2.2.15",
     "astro": "^4.16.7",
     "astro-seo": "^0.8.4",
     "tailwindcss": "^3.4.14",
