--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@notionhq/client": "^2.2.15",
     "astro": "^4.16.7",
     "astro-seo": "^0.8.4",
+    "canvas-confetti": "^1.9.3",
     "spotify-web-api-node": "^5.0.2",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/spotify-web-api-node": "^5.0.11"
   }
 }
